# Verification-Bot

./: 1.patch  main.py  pyproject.toml
Cogs/: verify.py
DB/: recent.txt
